# SteamRecordingsExporter

./: .bumpversion.toml  README.md  main.py  pyproject.toml
.github/workflows/: debug.yml  release.yml
src/steamrecordingsexporter/: __init__.py  __main__.py  exporter.py  helpers.py  main.py  mpd.py  representation.py  segments_data.py
