[project]
name = "steamrecordingsexporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-ffmpeg>=2.0.12",
    "typer>=0.21.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

[project.scripts]
steamrecordingsexporter = "steamrecordingsexporter.main:app"
