[project]
name = "steamrecordingsexporter"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-ffmpeg>=2.0.12",
    "typer>=0.21.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
steamrecordingsexporter = "steamrecordingsexporter.main:app"
